[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgns"
dynamic = ["version"]
description = "Python SDK for the pgns webhook relay API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "pgns" }]
keywords = ["webhooks", "pgns", "sdk", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://pgns.io"
Documentation = "https://docs.pgns.io/sdks/python"
Repository = "https://github.com/pgns-io/sdk-python"

[tool.hatch.version]
path = "_version.py"
